--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <div class="mt-8 space-y-2">
         <p class="text-lg font-semibold">🎯 Toss + Match + Session Prediction 🔥</p>
         <p class="text-sm font-semibold bg-blue-200 text-black">⚡ Free Fantasy Teams ⚡</p>
-        <div class="mt-6">
+        <div class="mt-6 flex place-items-center place-content-center">
           <a href="https://t.me/+wIKQS0HW0wIwMzY1">
             <button
               class="tetegrambtn border-2 border-black px-2 py-6 rounded-lg  text-lg font-bold  flex place-items-center place-content-center gap-2 text-white shadow-lg transition-transform transform hover:scale-110" style="box-shadow: 0px 0px 4px 1px red;">
